Practica10/bin/sintactico/y.output
   0  $accept : programa $end

   1  programa : lista_definiciones FUNC MAIN '(' ')' '{' cuerpo '}'

   2  lista_definiciones :
   3                     | lista_definiciones definicion

   4  definicion : definicion_funcion
   5             | definicion_variable

   6  lista_expresiones :
   7                    | lista_expresionesP

   8  lista_expresionesP : expresion
   9                     | lista_expresionesP ',' expresion

  10  expresion : CTE_ENTERA
  11            | CTE_REAL
  12            | CTE_CARACTER
  13            | ID
  14            | '(' expresion ')'
  15            | expresion '.' ID
  16            | expresion '[' expresion ']'
  17            | '-' expresion
  18            | '!' expresion
  19            | expresion '*' expresion
  20            | expresion '/' expresion
  21            | expresion '%' expresion
  22            | expresion '+' expresion
  23            | expresion '-' expresion
  24            | expresion '>' expresion
  25            | expresion MAYOR_IGUAL expresion
  26            | expresion '<' expresion
  27            | expresion MENOR_IGUAL expresion
  28            | expresion DISTINTO expresion
  29            | expresion IGUAL_IGUAL expresion
  30            | expresion AND expresion
  31            | expresion OR expresion
  32            | tipo '(' expresion ')'
  33            | ID '(' lista_expresiones ')'

  34  lista_sentencias :
  35                   | lista_sentencias sentencia

  36  sentencia : sentencia_if
  37            | sentencia_while
  38            | sentencia_write
  39            | sentencia_read
  40            | sentencia_asignacion
  41            | sentencia_return
  42            | sentencia_invocacion

  43  sentencia_asignacion : expresion '=' expresion ';'

  44  sentencia_if : IF expresion '{' lista_sentencias '}'
  45               | IF expresion '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'

  46  sentencia_while : WHILE expresion '{' lista_sentencias '}'

  47  sentencia_write : WRITE '(' lista_expresiones ')' ';'

  48  sentencia_read : READ '(' lista_expresiones ')' ';'

  49  sentencia_return : RETURN expresion ';'

  50  sentencia_invocacion : ID '(' lista_expresiones ')' ';'

  51  lista_variables :
  52                  | lista_variables definicion_variable

  53  definicion_variable : VAR identificadores tipo ';'

  54  identificadores : ID
  55                  | identificadores ',' ID

  56  campo : identificadores tipo ';'

  57  lista_campos : campo
  58               | lista_campos campo

  59  tipo : INT
  60       | FLOAT32
  61       | CHAR
  62       | '[' CTE_ENTERA ']' tipo
  63       | STRUCT '{' lista_campos '}'

  64  definicion_funcion : FUNC ID '(' lista_parametros ')' retorno '{' cuerpo '}'

  65  cuerpo : lista_variables lista_sentencias

  66  tipoSimple : INT
  67             | FLOAT32
  68             | CHAR

  69  retorno :
  70          | tipoSimple

  71  lista_parametros :
  72                   | lista_parametrosP

  73  lista_parametrosP : ID tipoSimple
  74                    | lista_parametrosP ',' ID tipoSimple

state 0
	$accept : . programa $end  (0)
	lista_definiciones : .  (2)

	.  reduce 2

	programa  goto 1
	lista_definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : lista_definiciones . FUNC MAIN '(' ')' '{' cuerpo '}'  (1)
	lista_definiciones : lista_definiciones . definicion  (3)

	FUNC  shift 3
	VAR  shift 4
	.  error

	definicion  goto 5
	definicion_funcion  goto 6
	definicion_variable  goto 7


state 3
	programa : lista_definiciones FUNC . MAIN '(' ')' '{' cuerpo '}'  (1)
	definicion_funcion : FUNC . ID '(' lista_parametros ')' retorno '{' cuerpo '}'  (64)

	MAIN  shift 8
	ID  shift 9
	.  error


state 4
	definicion_variable : VAR . identificadores tipo ';'  (53)

	ID  shift 10
	.  error

	identificadores  goto 11


state 5
	lista_definiciones : lista_definiciones definicion .  (3)

	.  reduce 3


state 6
	definicion : definicion_funcion .  (4)

	.  reduce 4


state 7
	definicion : definicion_variable .  (5)

	.  reduce 5


state 8
	programa : lista_definiciones FUNC MAIN . '(' ')' '{' cuerpo '}'  (1)

	'('  shift 12
	.  error


state 9
	definicion_funcion : FUNC ID . '(' lista_parametros ')' retorno '{' cuerpo '}'  (64)

	'('  shift 13
	.  error


state 10
	identificadores : ID .  (54)

	.  reduce 54


state 11
	definicion_variable : VAR identificadores . tipo ';'  (53)
	identificadores : identificadores . ',' ID  (55)

	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'['  shift 18
	','  shift 19
	.  error

	tipo  goto 20


state 12
	programa : lista_definiciones FUNC MAIN '(' . ')' '{' cuerpo '}'  (1)

	')'  shift 21
	.  error


state 13
	definicion_funcion : FUNC ID '(' . lista_parametros ')' retorno '{' cuerpo '}'  (64)
	lista_parametros : .  (71)

	ID  shift 22
	')'  reduce 71

	lista_parametros  goto 23
	lista_parametrosP  goto 24


state 14
	tipo : STRUCT . '{' lista_campos '}'  (63)

	'{'  shift 25
	.  error


state 15
	tipo : FLOAT32 .  (60)

	.  reduce 60


state 16
	tipo : INT .  (59)

	.  reduce 59


state 17
	tipo : CHAR .  (61)

	.  reduce 61


state 18
	tipo : '[' . CTE_ENTERA ']' tipo  (62)

	CTE_ENTERA  shift 26
	.  error


state 19
	identificadores : identificadores ',' . ID  (55)

	ID  shift 27
	.  error


state 20
	definicion_variable : VAR identificadores tipo . ';'  (53)

	';'  shift 28
	.  error


state 21
	programa : lista_definiciones FUNC MAIN '(' ')' . '{' cuerpo '}'  (1)

	'{'  shift 29
	.  error


state 22
	lista_parametrosP : ID . tipoSimple  (73)

	FLOAT32  shift 30
	INT  shift 31
	CHAR  shift 32
	.  error

	tipoSimple  goto 33


state 23
	definicion_funcion : FUNC ID '(' lista_parametros . ')' retorno '{' cuerpo '}'  (64)

	')'  shift 34
	.  error


state 24
	lista_parametros : lista_parametrosP .  (72)
	lista_parametrosP : lista_parametrosP . ',' ID tipoSimple  (74)

	','  shift 35
	')'  reduce 72


state 25
	tipo : STRUCT '{' . lista_campos '}'  (63)

	ID  shift 10
	.  error

	identificadores  goto 36
	campo  goto 37
	lista_campos  goto 38


state 26
	tipo : '[' CTE_ENTERA . ']' tipo  (62)

	']'  shift 39
	.  error


state 27
	identificadores : identificadores ',' ID .  (55)

	.  reduce 55


state 28
	definicion_variable : VAR identificadores tipo ';' .  (53)

	.  reduce 53


state 29
	programa : lista_definiciones FUNC MAIN '(' ')' '{' . cuerpo '}'  (1)
	lista_variables : .  (51)

	.  reduce 51

	cuerpo  goto 40
	lista_variables  goto 41


state 30
	tipoSimple : FLOAT32 .  (67)

	.  reduce 67


state 31
	tipoSimple : INT .  (66)

	.  reduce 66


state 32
	tipoSimple : CHAR .  (68)

	.  reduce 68


state 33
	lista_parametrosP : ID tipoSimple .  (73)

	.  reduce 73


state 34
	definicion_funcion : FUNC ID '(' lista_parametros ')' . retorno '{' cuerpo '}'  (64)
	retorno : .  (69)

	FLOAT32  shift 30
	INT  shift 31
	CHAR  shift 32
	'{'  reduce 69

	retorno  goto 42
	tipoSimple  goto 43


state 35
	lista_parametrosP : lista_parametrosP ',' . ID tipoSimple  (74)

	ID  shift 44
	.  error


state 36
	identificadores : identificadores . ',' ID  (55)
	campo : identificadores . tipo ';'  (56)

	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'['  shift 18
	','  shift 19
	.  error

	tipo  goto 45


state 37
	lista_campos : campo .  (57)

	.  reduce 57


state 38
	lista_campos : lista_campos . campo  (58)
	tipo : STRUCT '{' lista_campos . '}'  (63)

	ID  shift 10
	'}'  shift 46
	.  error

	identificadores  goto 36
	campo  goto 47


state 39
	tipo : '[' CTE_ENTERA ']' . tipo  (62)

	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'['  shift 18
	.  error

	tipo  goto 48


state 40
	programa : lista_definiciones FUNC MAIN '(' ')' '{' cuerpo . '}'  (1)

	'}'  shift 49
	.  error


state 41
	lista_variables : lista_variables . definicion_variable  (52)
	cuerpo : lista_variables . lista_sentencias  (65)
	lista_sentencias : .  (34)

	VAR  shift 4
	CTE_ENTERA  reduce 34
	IF  reduce 34
	CTE_CARACTER  reduce 34
	ID  reduce 34
	WRITE  reduce 34
	CTE_REAL  reduce 34
	STRUCT  reduce 34
	WHILE  reduce 34
	FLOAT32  reduce 34
	INT  reduce 34
	RETURN  reduce 34
	CHAR  reduce 34
	READ  reduce 34
	'-'  reduce 34
	'!'  reduce 34
	'['  reduce 34
	'('  reduce 34
	'}'  reduce 34

	definicion_variable  goto 50
	lista_sentencias  goto 51


state 42
	definicion_funcion : FUNC ID '(' lista_parametros ')' retorno . '{' cuerpo '}'  (64)

	'{'  shift 52
	.  error


state 43
	retorno : tipoSimple .  (70)

	.  reduce 70


state 44
	lista_parametrosP : lista_parametrosP ',' ID . tipoSimple  (74)

	FLOAT32  shift 30
	INT  shift 31
	CHAR  shift 32
	.  error

	tipoSimple  goto 53


state 45
	campo : identificadores tipo . ';'  (56)

	';'  shift 54
	.  error


state 46
	tipo : STRUCT '{' lista_campos '}' .  (63)

	.  reduce 63


state 47
	lista_campos : lista_campos campo .  (58)

	.  reduce 58


state 48
	tipo : '[' CTE_ENTERA ']' tipo .  (62)

	.  reduce 62


state 49
	programa : lista_definiciones FUNC MAIN '(' ')' '{' cuerpo '}' .  (1)

	.  reduce 1


state 50
	lista_variables : lista_variables definicion_variable .  (52)

	.  reduce 52


state 51
	lista_sentencias : lista_sentencias . sentencia  (35)
	cuerpo : lista_variables lista_sentencias .  (65)

	CTE_ENTERA  shift 55
	IF  shift 56
	CTE_CARACTER  shift 57
	ID  shift 58
	WRITE  shift 59
	CTE_REAL  shift 60
	STRUCT  shift 14
	WHILE  shift 61
	FLOAT32  shift 15
	INT  shift 16
	RETURN  shift 62
	CHAR  shift 17
	READ  shift 63
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	'}'  reduce 65

	expresion  goto 67
	tipo  goto 68
	sentencia  goto 69
	sentencia_if  goto 70
	sentencia_while  goto 71
	sentencia_write  goto 72
	sentencia_read  goto 73
	sentencia_asignacion  goto 74
	sentencia_return  goto 75
	sentencia_invocacion  goto 76


state 52
	definicion_funcion : FUNC ID '(' lista_parametros ')' retorno '{' . cuerpo '}'  (64)
	lista_variables : .  (51)

	.  reduce 51

	cuerpo  goto 77
	lista_variables  goto 41


state 53
	lista_parametrosP : lista_parametrosP ',' ID tipoSimple .  (74)

	.  reduce 74


state 54
	campo : identificadores tipo ';' .  (56)

	.  reduce 56


state 55
	expresion : CTE_ENTERA .  (10)

	.  reduce 10


state 56
	sentencia_if : IF . expresion '{' lista_sentencias '}'  (44)
	sentencia_if : IF . expresion '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (45)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 79
	tipo  goto 68


state 57
	expresion : CTE_CARACTER .  (12)

	.  reduce 12


state 58
	expresion : ID .  (13)
	expresion : ID . '(' lista_expresiones ')'  (33)
	sentencia_invocacion : ID . '(' lista_expresiones ')' ';'  (50)

	'('  shift 80
	DISTINTO  reduce 13
	MENOR_IGUAL  reduce 13
	MAYOR_IGUAL  reduce 13
	IGUAL_IGUAL  reduce 13
	AND  reduce 13
	OR  reduce 13
	'='  reduce 13
	'>'  reduce 13
	'<'  reduce 13
	'+'  reduce 13
	'-'  reduce 13
	'*'  reduce 13
	'/'  reduce 13
	'%'  reduce 13
	'['  reduce 13
	'.'  reduce 13


state 59
	sentencia_write : WRITE . '(' lista_expresiones ')' ';'  (47)

	'('  shift 81
	.  error


state 60
	expresion : CTE_REAL .  (11)

	.  reduce 11


state 61
	sentencia_while : WHILE . expresion '{' lista_sentencias '}'  (46)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 82
	tipo  goto 68


state 62
	sentencia_return : RETURN . expresion ';'  (49)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 83
	tipo  goto 68


state 63
	sentencia_read : READ . '(' lista_expresiones ')' ';'  (48)

	'('  shift 84
	.  error


state 64
	expresion : '-' . expresion  (17)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 85
	tipo  goto 68


state 65
	expresion : '!' . expresion  (18)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 86
	tipo  goto 68


state 66
	expresion : '(' . expresion ')'  (14)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 87
	tipo  goto 68


state 67
	expresion : expresion . '.' ID  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)
	sentencia_asignacion : expresion . '=' expresion ';'  (43)

	DISTINTO  shift 88
	MENOR_IGUAL  shift 89
	MAYOR_IGUAL  shift 90
	IGUAL_IGUAL  shift 91
	AND  shift 92
	OR  shift 93
	'='  shift 94
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'['  shift 102
	'.'  shift 103
	.  error


state 68
	expresion : tipo . '(' expresion ')'  (32)

	'('  shift 104
	.  error


state 69
	lista_sentencias : lista_sentencias sentencia .  (35)

	.  reduce 35


state 70
	sentencia : sentencia_if .  (36)

	.  reduce 36


state 71
	sentencia : sentencia_while .  (37)

	.  reduce 37


state 72
	sentencia : sentencia_write .  (38)

	.  reduce 38


state 73
	sentencia : sentencia_read .  (39)

	.  reduce 39


state 74
	sentencia : sentencia_asignacion .  (40)

	.  reduce 40


state 75
	sentencia : sentencia_return .  (41)

	.  reduce 41


state 76
	sentencia : sentencia_invocacion .  (42)

	.  reduce 42


state 77
	definicion_funcion : FUNC ID '(' lista_parametros ')' retorno '{' cuerpo . '}'  (64)

	'}'  shift 105
	.  error


state 78
	expresion : ID .  (13)
	expresion : ID . '(' lista_expresiones ')'  (33)

	'('  shift 106
	DISTINTO  reduce 13
	MENOR_IGUAL  reduce 13
	MAYOR_IGUAL  reduce 13
	IGUAL_IGUAL  reduce 13
	AND  reduce 13
	OR  reduce 13
	'='  reduce 13
	'>'  reduce 13
	'<'  reduce 13
	'+'  reduce 13
	'-'  reduce 13
	'*'  reduce 13
	'/'  reduce 13
	'%'  reduce 13
	'['  reduce 13
	']'  reduce 13
	'.'  reduce 13
	')'  reduce 13
	'{'  reduce 13
	','  reduce 13
	';'  reduce 13


state 79
	expresion : expresion . '.' ID  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)
	sentencia_if : IF expresion . '{' lista_sentencias '}'  (44)
	sentencia_if : IF expresion . '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (45)

	DISTINTO  shift 88
	MENOR_IGUAL  shift 89
	MAYOR_IGUAL  shift 90
	IGUAL_IGUAL  shift 91
	AND  shift 92
	OR  shift 93
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'['  shift 102
	'.'  shift 103
	'{'  shift 107
	.  error


state 80
	expresion : ID '(' . lista_expresiones ')'  (33)
	sentencia_invocacion : ID '(' . lista_expresiones ')' ';'  (50)
	lista_expresiones : .  (6)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	')'  reduce 6

	lista_expresiones  goto 108
	lista_expresionesP  goto 109
	expresion  goto 110
	tipo  goto 68


state 81
	sentencia_write : WRITE '(' . lista_expresiones ')' ';'  (47)
	lista_expresiones : .  (6)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	')'  reduce 6

	lista_expresiones  goto 111
	lista_expresionesP  goto 109
	expresion  goto 110
	tipo  goto 68


state 82
	expresion : expresion . '.' ID  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)
	sentencia_while : WHILE expresion . '{' lista_sentencias '}'  (46)

	DISTINTO  shift 88
	MENOR_IGUAL  shift 89
	MAYOR_IGUAL  shift 90
	IGUAL_IGUAL  shift 91
	AND  shift 92
	OR  shift 93
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'['  shift 102
	'.'  shift 103
	'{'  shift 112
	.  error


state 83
	expresion : expresion . '.' ID  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)
	sentencia_return : RETURN expresion . ';'  (49)

	DISTINTO  shift 88
	MENOR_IGUAL  shift 89
	MAYOR_IGUAL  shift 90
	IGUAL_IGUAL  shift 91
	AND  shift 92
	OR  shift 93
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'['  shift 102
	'.'  shift 103
	';'  shift 113
	.  error


state 84
	sentencia_read : READ '(' . lista_expresiones ')' ';'  (48)
	lista_expresiones : .  (6)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	')'  reduce 6

	lista_expresiones  goto 114
	lista_expresionesP  goto 109
	expresion  goto 110
	tipo  goto 68


state 85
	expresion : expresion . '.' ID  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : '-' expresion .  (17)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)

	'['  shift 102
	'.'  shift 103
	DISTINTO  reduce 17
	MENOR_IGUAL  reduce 17
	MAYOR_IGUAL  reduce 17
	IGUAL_IGUAL  reduce 17
	AND  reduce 17
	OR  reduce 17
	'='  reduce 17
	'>'  reduce 17
	'<'  reduce 17
	'+'  reduce 17
	'-'  reduce 17
	'*'  reduce 17
	'/'  reduce 17
	'%'  reduce 17
	']'  reduce 17
	')'  reduce 17
	'{'  reduce 17
	','  reduce 17
	';'  reduce 17


state 86
	expresion : expresion . '.' ID  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : '!' expresion .  (18)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)

	'['  shift 102
	'.'  shift 103
	DISTINTO  reduce 18
	MENOR_IGUAL  reduce 18
	MAYOR_IGUAL  reduce 18
	IGUAL_IGUAL  reduce 18
	AND  reduce 18
	OR  reduce 18
	'='  reduce 18
	'>'  reduce 18
	'<'  reduce 18
	'+'  reduce 18
	'-'  reduce 18
	'*'  reduce 18
	'/'  reduce 18
	'%'  reduce 18
	']'  reduce 18
	')'  reduce 18
	'{'  reduce 18
	','  reduce 18
	';'  reduce 18


state 87
	expresion : '(' expresion . ')'  (14)
	expresion : expresion . '.' ID  (15)
	expresion : expresion . '[' expresion ']'  (16)
	expresion : expresion . '*' expresion  (19)
	expresion : expresion . '/' expresion  (20)
	expresion : expresion . '%' expresion  (21)
	expresion : expresion . '+' expresion  (22)
	expresion : expresion . '-' expresion  (23)
	expresion : expresion . '>' expresion  (24)
	expresion : expresion . MAYOR_IGUAL expresion  (25)
	expresion : expresion . '<' expresion  (26)
	expresion : expresion . MENOR_IGUAL expresion  (27)
	expresion : expresion . DISTINTO expresion  (28)
	expresion : expresion . IGUAL_IGUAL expresion  (29)
	expresion : expresion . AND expresion  (30)
	expresion : expresion . OR expresion  (31)

	DISTINTO  shift 88
	MENOR_IGUAL  shift 89
	MAYOR_IGUAL  shift 90
	IGUAL_IGUAL  shift 91
	AND  shift 92
	OR  shift 93
	'>'  shift 95
	'<'  shift 96
	'+'  shift 97
	'-'  shift 98
	'*'  shift 99
	'/'  shift 100
	'%'  shift 101
	'['  shift 102
	'.'  shift 103
	')'  shift 115
	.  error


state 88
	expresion : expresion DISTINTO . expresion  (28)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 116
	tipo  goto 68


state 89
	expresion : expresion MENOR_IGUAL . expresion  (27)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 117
	tipo  goto 68


state 90
	expresion : expresion MAYOR_IGUAL . expresion  (25)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 118
	tipo  goto 68


state 91
	expresion : expresion IGUAL_IGUAL . expresion  (29)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 119
	tipo  goto 68


state 92
	expresion : expresion AND . expresion  (30)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 120
	tipo  goto 68


state 93
	expresion : expresion OR . expresion  (31)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 121
	tipo  goto 68


state 94
	sentencia_asignacion : expresion '=' . expresion ';'  (43)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 122
	tipo  goto 68


state 95
	expresion : expresion '>' . expresion  (24)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 123
	tipo  goto 68


state 96
	expresion : expresion '<' . expresion  (26)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 124
	tipo  goto 68


state 97
	expresion : expresion '+' . expresion  (22)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 125
	tipo  goto 68


state 98
	expresion : expresion '-' . expresion  (23)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 126
	tipo  goto 68


state 99
	expresion : expresion '*' . expresion  (19)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 127
	tipo  goto 68


state 100
	expresion : expresion '/' . expresion  (20)

	CTE_ENTERA  shift 55
	CTE_CARACTER  shift 57
	ID  shift 78
	CTE_REAL  shift 60
	STRUCT  shift 14
	FLOAT32  shift 15
	INT  shift 16
	CHAR  shift 17
	'-'  shift 64
	'!'  shift 65
	'['  shift 18
	'('  shift 66
	.  error

	expresion  goto 128
	tipo  goto 68


state 101
	expresion : expresion '%' . expresion  (21)
